[package]
name = "hippowm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
x11 = "2.18.0"
env_logger = { version = "0.11.1", features = [] }
libc = { version = "0.2", features = [] }
log = "0.4.20"
penrose = "0.3.4"
serde = { version = "1.0.196", features = ["derive"] }
confy = { version = "0.6.0", features = ["yaml_conf"], default-features = false }
tracing-subscriber = "0.3.18"
anyhow = "1.0.79"
xcursor = "0.3.5"
tracing = "0.1.40"
gtk = "0.18.1"
glib = "0.19.0"
